<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_item_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/menu_item_Sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_sort_by_name"
                android:icon="@drawable/ic_baseline_search_24"
                android:title="@string/menu_item_sort_1" />

            <item
                android:id="@+id/menu_sort_by_date"
                android:icon="@drawable/ic_baseline_search_24"
                android:title="@string/menu_item_sort_2" />
        </menu>

    </item>
    <item
        android:id="@+id/menu_hide_completed"
        android:checkable="true"
        android:title="@string/menu_item_hide"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/menu_item_delete"
        app:showAsAction="never" />
</menu>